# barCodeScanner

./: barcodes.json  barcodes.txt  pyproject.toml  qr_scanner.py  test.py
