[tool.poetry]
name = "qrcodereader"
version = "0.1.0"
description = ""
authors = ["satyamdas03 <116027621+satyamdas03@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyzbar = "^0.1.9"
requests = "^2.32.4"
pillow = "^11.3.0"
dynamsoft-barcode-reader-bundle = "^11.0.4000"
dbr = "^9.6.40.3"
pytesseract = "^0.3.13"
easyocr = "^1.7.2"
matplotlib = "^3.10.3"
opencv-contrib-python = "^4.12.0.88"
opencv-python = "^4.12.0.88"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
